tdf#125564: WatchWindow should report correct type for global constants

Change-Id: Ibe078e61385e78aab3933d70af14f4b38806fcf6
Reviewed-on: https://gerrit.libreoffice.org/73142
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>